# gryazevichki

./: .gitattributes  Cargo.toml  README.md  TODO  build_debug.sh  build_release.sh  corvette.ron  run_release.sh
.cargo/: config.toml
assets/corvette/: license.txt
assets/corvette/body/: corvette_body.gltf
assets/corvette/wheel/: corvette_wheel.gltf
src/: main.rs
src/Game/: draggable.rs  mod.rs  spawn.rs  systems.rs
src/Game/Herringbone/: mod.rs  spawn.rs  systems.rs
src/Game/Ui/: draw.rs  mod.rs  systems.rs  writeback.rs
src/Game/Ui/egui_ext/: file_dialog.rs
src/Game/Vehicle/: mod.rs  motor.rs  save_load.rs  spawn.rs  systems.rs
src/Herringbone/: mod.rs  spawn.rs  systems.rs
src/Ui/: draw.rs  mod.rs  systems.rs  writeback.rs
src/Ui/egui_ext/: file_dialog.rs  mod.rs  toggle_switch.rs
src/Vehicle/: mod.rs  systems.rs
src/bevy_spline/: mod.rs  spawn.rs  systems.rs
src/draggable/: mod.rs  spawn.rs
src/game/: mod.rs  spawn.rs  systems.rs
src/gchki_egui/: file_dialog.rs  mod.rs  toggle_switch.rs
src/herringbone/: mod.rs  spawn.rs  systems.rs
src/ui/: draw.rs  mod.rs  systems.rs
src/vehicle/: mod.rs  spawn.rs
