[package]
name = "gryazevichki"
version = "0.1.0"
edition = "2021"

# 1 Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# 3 Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 1

[profile.dev.package.rapier3d]
opt-level = 0

[profile.dev.package.bevy_fly_camera]
opt-level = 0

[dependencies]

rand = "0.8.0"
bevy = { version = "0.6.1" } #, features = ["dynamic"] }
bevy_rapier3d = { git = "https://github.com/gavlig/bevy_rapier.git", branch = "gryazevichki_rapier_v0.12.0-alpha.0", features = [ "simd-stable", "render" ] } # "parallel"
bevy_egui = "0.12"
bevy_fly_camera = { git = "https://github.com/gavlig/bevy_fly_camera.git", branch = "gryazevichki_rapier_v0.12.0-alpha.0" }

#[patch.crates-io]
#bevy_rapier3d = { path = "../bevy_rapier/bevy_rapier3d/" }
#rapier3d = { path = "../rapier/crates/rapier3d" }