[package]
name = "gryazevichki"
version = "0.1.0"
edition = "2021"

# 1 Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# 3 Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 1

[profile.dev.package.rapier3d]
opt-level = 0

[dependencies]

scopeguard = "1.1.0"
directories = "4.0"
ron = "0.7"
serde = { version = "1", features = ["derive"] }
bevy = { version = "0.7" } #, features = ["dynamic"] }
rapier3d = { git = "https://github.com/gavlig/rapier.git", branch = "gryazevichki" }
bevy_rapier3d = { git = "https://github.com/gavlig/bevy_rapier.git", branch = "gryazevichki", features = [ "simd-stable", "debug-render" ] } # "parallel"
bevy_egui = "0.13"
bevy_fly_camera = { git = "https://github.com/gavlig/bevy_fly_camera.git", branch = "gryazevichki" }
bevy_atmosphere = "0.3.1"
